1. 添加 LiveEventBus； 2. 添加 ZKLiveEventBus Demo； 3. 添加 ZKLiveEventBus 使用说明。

--- a/ZKLiveEventBus/build.gradle
+++ b/ZKLiveEventBus/build.gradle
@@ -26,4 +26,6 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation deps.kotlin_stdlib8
+
+    api 'com.jeremyliao:live-event-bus:1.4.4'
 }
