--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     implementation support.design
     implementation support.app_compat
     implementation deps.kotlin_stdlib8
+    implementation project(path: ':ZKLiveEventBus')
 }
