--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,7 @@ dependencies {
     implementation support.design
     implementation support.app_compat
     implementation deps.kotlin_stdlib8
-    implementation project(path: ':ZKLiveEventBus')
+
+    implementation 'com.github.ZhuoKeTeam:ZKLiveEventBus:1.0.0'
+//    implementation project(path: ':ZKLiveEventBus')
 }
